--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "devDependencies": {
     "jest": "27.5.1",
     "standard": "16.0.4"
+  },
+  "dependencies": {
+    "@vtfk/logger": "4.1.2",
+    "@vtfk/utilities": "1.1.0",
+    "axios": "0.26.1",
+    "qs": "6.10.3"
   }
 }
