--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vtfk/logger": "4.1.2",
     "@vtfk/utilities": "1.1.0",
     "axios": "0.26.1",
+    "jsonwebtoken": "8.5.1",
     "qs": "6.10.3"
   }
 }
